--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             3. Internet liberada automaticamente!
         </div>
 
-        <a href="https://m.facebook.com/checkin" class="btn btn-facebook">
+        <a href="https://www.facebook.com/maranathasaude/checkin" class="btn btn-facebook">
             📍 Check-in Facebook
         </a>
         
-        <a href="https://instagram.com" class="btn btn-instagram">
+        <a href="https://www.instagram.com/maranathasaude/">
             📷 Instagram
         </a>
         
