--- a/index.html
+++ b/index.html
@@ -1,96 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Wi-Fi Gratuito</title>
-    <meta charset="utf-8">
+    <title>Acesso Wi-Fi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 50px 20px;
-            background: #f0f2f5;
-        }
-        .container {
-            background: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            max-width: 400px;
-            margin: 0 auto;
-        }
-        h1 {
-            color: #333;
-            margin-bottom: 10px;
-        }
-        p {
-            color: #666;
-            margin-bottom: 30px;
-        }
-        .btn {
-            display: inline-block;
-            background: #1877F2;
-            color: white;
-            padding: 15px 30px;
-            border: none;
-            border-radius: 8px;
-            text-decoration: none;
-            font-size: 16px;
-            font-weight: bold;
-            cursor: pointer;
-        }
-        .btn:hover {
-            background: #166FE5;
-        }
+        body { font-family: Arial; text-align: center; padding: 50px 20px; }
+        .container { max-width: 400px; margin: 0 auto; }
+        button { background: #1877F2; color: white; padding: 15px 30px; 
+                border: none; border-radius: 8px; font-size: 16px; margin: 10px; }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>🌐 Wi-Fi Gratuito</h1>
-        <p>Clique no botão abaixo para conectar à internet</p>
-        <button class="btn" onclick="authorize()">Conectar</button>
+        <h2>🌐 Wi-Fi Gratuito</h2>
+        <p>Clique para acessar a internet</p>
+        <button onclick="liberarAcesso()">📍 Conectar à Internet</button>
     </div>
 
     <script>
-        // Função para obter parâmetros da URL
-        function getUrlParams() {
-            var params = {};
-            var queryString = window.location.search.substring(1);
-            var pairs = queryString.split('&');
-            for (var i = 0; i < pairs.length; i++) {
-                var pair = pairs[i].split('=');
-                params[decodeURIComponent(pair[0])] = decodeURIComponent(pair[1] || '');
-            }
-            return params;
-        }
+    function getParameter(name) {
+        const urlParams = new URLSearchParams(window.location.search);
+        return urlParams.get(name);
+    }
 
-        // Função para autorizar e redirecionar
-        function authorize() {
-            var params = getUrlParams();
-            var redirectUri = params.redirect_uri;
-            var desiredUrl = params.continue || 'http://www.google.com';
-            var ts = params.ts;
-            var userHash = params.user_hash;
+    function liberarAcesso() {
+        // Parâmetros recebidos do roteador Intelbras
+        const redirect_uri = getParameter('redirect_uri');
+        const user_hash = getParameter('user_hash');
+        const ts = getParameter('ts');
+        const continue_url = getParameter('continue') || 'https://google.com';
 
-            // Parâmetros opcionais - configuramos alguns valores padrão
-            var sessionTimeout = 28800; // 8 horas em segundos
-            var idleTimeout = 300; // 5 minutos
-            var downloadKbps = 2048; // 2 Mbps em kbps
-            var uploadKbps = 1024; // 1 Mbps em kbps
+        // Configurações de acesso
+        const session_timeout = 28800; // 8 horas
+        const idle_timeout = 300;      // 5 minutos
+        const download_kbps = 2048;    // 2 Mbps
+        const upload_kbps = 1024;      // 1 Mbps
 
-            // Construir a URL de redirecionamento para o roteador
-            var finalUrl = redirectUri + 
-                '?continue=' + encodeURIComponent(desiredUrl) +
-                '&ts=' + ts +
-                '&user_hash=' + userHash +
-                '&session_timeout=' + sessionTimeout +
-                '&idle_timeout=' + idleTimeout +
-                '&download_kbps=' + downloadKbps +
-                '&upload_kbps=' + uploadKbps;
+        // Monta URL de redirecionamento para o roteador
+        const finalUrl = `${redirect_uri}?ts=${ts}&user_hash=${user_hash}&continue=${encodeURIComponent(continue_url)}&session_timeout=${session_timeout}&idle_timeout=${idle_timeout}&download_kbps=${download_kbps}&upload_kbps=${upload_kbps}`;
 
-            // Redirecionar
-            window.location.href = finalUrl;
-        }
+        // Redireciona para o roteador liberar acesso
+        window.location.href = finalUrl;
+    }
+
+    // Auto-executa após 2 segundos (opcional)
+    setTimeout(() => {
+        document.querySelector('button').click();
+    }, 2000);
     </script>
 </body>
 </html>
